Fix some things